Fix dark mode styles

--- a/src/components/modal/components/content/components/body/components/language/Language.module.css
+++ b/src/components/modal/components/content/components/body/components/language/Language.module.css
@@ -1,6 +1,7 @@
 .block {
     border: 1px solid var(--border-color);
     border-radius: 8px;
+    background: var(--body-block-background);
 }
 
 .item {
@@ -13,5 +14,5 @@
 }
 
 .item:not(:first-child) {
-    border-top: 1px solid var(--border-color)
+    border-top: 1px solid var(--diviver-color)
 }
