--- a/src/components/modal/components/content/components/body/components/theme/Theme.module.css
+++ b/src/components/modal/components/content/components/body/components/theme/Theme.module.css
@@ -5,6 +5,7 @@
 .block {
     border: 1px solid var(--border-color);
     border-radius: 8px;
+    background: var(--body-block-background);
 }
 
 .item {
@@ -17,5 +18,5 @@
 
 
 .item:not(:first-child) {
-    border-top: 1px solid var(--border-color)
+    border-top: 1px solid var(--diviver-color)
 }
